# Statescope

./: .gitignore  README.md  Statescope_full.yml  environment.yaml  environment_gpu.yaml  pyproject.toml  r.yml
Deconvolution/: OncoBLADE_chimera.py
Framework/: Statescope.py
Framework/BLADE_Deconvolution/: CorrectVariance.R  CreateSignature.py
Framework/StateDiscovery/: cNMF.py
Framework/StateDiscovery/lib/: cnmf_helpers.py
Framework/StateDiscovery/lib/pymf/: cnmf.py  kmeans.py
Statescope/: Statescope.py
Statescope/BLADE_Deconvolution/: BLADE.py  CreateSignature.py
Statescope/Deconvolution/: BLADE.py
Statescope/StateDiscovery/: cNMF.py
Statescope/StateDiscovery/lib/: cnmf_helpers.py
src/BLADE_Deconvolution/: BLADE.py  BLADE_lite.py  BLADE_lite2.py  BLADEpro.py  CreateSignature.py
src/StateDiscovery/: cNMF.py
src/StateDiscovery/lib/: cnmf_helpers.py
src/StateDiscovery/lib/pymf/: cnmf.py  kmeans.py
src/Statescope/: .#Statescope.py  .#Statescope.py.rclonelink  Statescope.py
test/: PBMCsignature.ipynb  Signature.py  Statescope_test.py  Test.ipynb
test/write/: pseudobulk_data.csv
tutorial/: AdvancedTutorial.ipynb  BasicTutorial.ipynb  README.md  README.txt  cpu_deconvolution.sbatch  gpu_deconvolution.sbatch  readme.txt  run_deconvolution_hpc.py
tutorial/Output/: fractions.csv  fractions2.csv
tutorial/Output/logs/: statescope_cpu_253216.err  statescope_cpu_253217.err  statescope_cpu_253218.err  statescope_cpu_253219.err  statescope_cpu_253219.out  statescope_cpu_253221.err  statescope_cpu_253224.err  statescope_cpu_253225.err  statescope_cpu_253228.err  statescope_cpu_253228.out  statescope_cpu_253229.err  statescope_cpu_253229.out  statescope_cpu_253231.err  statescope_cpu_253237.err  statescope_cpu_253237.out  statescope_cpu_253238.err  statescope_cpu_253238.out  statescope_cpu_253279.err  statescope_cpu_253279.out  statescope_cpu_253283.err  statescope_cpu_253287.err  statescope_cpu_253288.err  statescope_cpu_253288.out  statescope_gpu_253289.err  statescope_gpu_253290.err  statescope_gpu_253290.out  statescope_gpu_255465.err  statescope_gpu_255465.out  statescope_gpu_255498.err  statescope_gpu_255499.err  statescope_gpu_255499.out  statescope_gpu_255500.err  statescope_gpu_255500.out
