[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Statescope"
version = "1.0.7"
description = "Statescope framework to uncover cell states from bulk RNA-seq and DNA-seq data"
readme = "README.md"
authors = [
    { name = "Jurriaan Janssen", email = "j.janssen4@amsterdamumc.nl" },
    { name = "Mischa Steketee", email = "m.f.b.steketee@amsterdamumc.nl" },
    { name = "Aryamaan Bose", email = "a.bose1@amsterdamumc.nl" },
    { name = "Yongsoo Kim", email = "yo.kim@amsterdamumc.nl" }
]
license = { file = "LICENSE" }

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

requires-python = ">=3.10"

dependencies = [
    "numba>=0.57",
    "numpy>=1.23,<2",
    "scipy>=1.9",
    "scikit-learn>=1.1",
    "joblib>=1.2",
    "pandas>=1.5,<2",
    "statsmodels>=0.13",
    "statescope-autogenes>=1.0.4.post2",
    "multiprocess>=0.70",
    "anndata>=0.7",
    "torch>=2.0",
    "torchvision>=0.15",
    "seaborn>=0.12",
    "requests>=2.28",
]

[project.urls]
Homepage = "https://tgac-vumc.github.io/Statescopeweb/"
Repository = "https://github.com/tgac-vumc/Statescope"
